networkingAWS/instance/01_sg.tf
resource "aws_security_group" "allow_app" {
  name        = "allow_app"
  description = "Allow app inbound traffic"
  vpc_id      =  "vpc-09ee496d7c7d7922a" #data.terraform_remote_state.vpc.outputs.vpc_id --> con remote_state

  ingress {
    description = "Allow app"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  ingress {
    description = "Allow app"
    from_port   = 22
    to_port     = 22	
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }
  egress {
    description = "Allow all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "allow_lb" {
  name        = "allow_lb"
  description = "Allow lb inbound traffic"
  vpc_id      = "vpc-09ee496d7c7d7922a" #data.terraform_remote_state.vpc.outputs.vpc_id

  ingress {
    description = "Allow lb"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
